--- a/deploy/scripts/docker-compose.yml
+++ b/deploy/scripts/docker-compose.yml
@@ -2,6 +2,6 @@ version: '3.9'
 services:
   spring-petclinic:
     image: kimaudwns/bookshop:latest
-    container_name: bookshop:latest
+    container_name: bookshop
     ports:
       - "80:8080"
