--- a/bookShop01/src/main/webapp/WEB-INF/config/jdbc/jdbc.properties
+++ b/bookShop01/src/main/webapp/WEB-INF/config/jdbc/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@database-1.czcksii66kwf.ap-northeast-2.rds.amazonaws.com:1521:XE
-jdbc.username=scott
-jdbc.password=TIGER
+jdbc.url=jdbc:oracle:thin:@database-2.czcksii66kwf.ap-northeast-2.rds.amazonaws.com:1521:XE
+jdbc.username=admin
+jdbc.password=046677kk
 
 
